<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fa_tv_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/fa_tv_add"
        android:textAlignment="center"
        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:id="@+id/fa_tv_operator"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fa_tv_operator"
            android:textSize="24dp"/>

        <Spinner
            android:id="@+id/fa_spinner1"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/fa_operator_arrays"
            android:prompt="@string/fa_operator_prompt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/fa_tv_operand"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fa_tv_operand"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/fa_et_input"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/fa_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_tv_submit"
            android:textAlignment="center">
        </Button>
    </LinearLayout>

</LinearLayout>